src/ApiGateways/Envoy/web/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: bazaar_backend_route
                  virtual_hosts:
                    - name: bazaar_backend
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - safe_regex:
                                google_re2: {}
                                regex: \*
                          allow_methods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
                          allow_headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Access-Control-Allow-Origin"
                          allow_credentials: true
                          max_age: "86400"
                      domains:
                        - "*"
                      routes:
                        - name: "pc-short"
                          match:
                            prefix: "/pc/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: catalog
                        - name: "fbb"
                          match:
                            prefix: "/fbb/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: fbbinventory
                        - name: "tr-short"
                          match:
                            prefix: "/tr/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: transport
                        - name: "d-short"
                          match:
                            prefix: "/d/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: disposal
                        - name: "o-short"
                          match:
                            prefix: "/o/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: ordering
                        - name: "b-short"
                          match:
                            prefix: "/b/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: basket
                        - name: "s-short"
                          match:
                            prefix: "/s/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: shopper-info
                        - name: "sc-short"
                          match:
                            prefix: "/sc/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: contracting
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.file_access_log
                    filter:
                      not_health_check_filter: {}
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          time: "%START_TIME%"
                          protocol: "%PROTOCOL%"
                          duration: "%DURATION%"
                          request_method: "%REQ(:METHOD)%"
                          request_host: "%REQ(HOST)%"
                          path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_flags: "%RESPONSE_FLAGS%"
                          route_name: "%ROUTE_NAME%"
                          upstream_host: "%UPSTREAM_HOST%"
                          upstream_cluster: "%UPSTREAM_CLUSTER%"
                          upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
  clusters:
    - name: shopper-info
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: shopper-info
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: shopper-info-api
                      port_value: 80
    - name: catalog
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: catalog
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: catalog-api
                      port_value: 80
    - name: fbbinventory
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: fbbinventory
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: fbbinventory-api
                      port_value: 80
    - name: transport
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: transport
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: transport-api
                      port_value: 80
    - name: disposal
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: disposal
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: disposal-api
                      port_value: 80
    - name: basket
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: basket
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: basket-api
                      port_value: 80
    - name: ordering
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: ordering
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ordering-api
                      port_value: 80
    - name: contracting
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: contracting
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: contracting-api
                      port_value: 80
